feat(source-kafka): enhance ProtobufFormat to build Airbyte streams from Schema Registry descriptors